--- a/chatterbot_corpus/data/english/history.yml
+++ b/chatterbot_corpus/data/english/history.yml
@@ -19,4 +19,6 @@ conversations:
   - thomas edison.
 - - who invented the steam engine
   - james watt.
+- - who is the father of AI?
+  - Alan Turing
 
